@startuml
!define QtWidgets ../../Qt/Widgets
!include QtWidgets/QGraphicsItemGroup.puml

class LayoutGraphicsItem {
  +LayoutGraphicsItem()
}

QGraphicsItemGroup <|-- LayoutGraphicsItem


class SectionGraphicsItemData {
}


class SectionGraphicsItem {
}

LayoutGraphicsItem <|-- SectionGraphicsItem
SectionGraphicsItem ..> SectionGraphicsItemData


class SegmentGraphicsItem {
}

LayoutGraphicsItem <|-- SegmentGraphicsItem


hide methods
hide attributes

@enduml
